# docs/swagger.yaml
@@ -1180,6 +1180,39 @@ paths:
       summary: Get Collection By CollectionID
       tags:
       - collection
+  /collection/ahp/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Calculate AHP
+      parameters:
+      - description: id path
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.CollectionGetByIDResponseDoc'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.errorResponse'
+      summary: CalculateA HP
+      tags:
+      - collection
   /collection/user/{user_id}:
     get:
       consumes:
