# internal/usecase/collection/route.go
@@ -23,4 +23,5 @@ func (h *handler) Route(g *echo.Group) {
 	g.POST("", h.Create)
 	g.PATCH("", h.Update)
 	g.DELETE("/:id", h.Delete)
+	g.GET("/ahp/:id", h.CalculateAHP)
 }
